# Tokimu

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md
.github/: copilot-instructions.md
.workbench/Audits/: ui-tools-lucide-glyph-corpus-audit.md
crates/tokimu/: Cargo.toml
crates/tokimu-assets/: Cargo.toml
crates/tokimu-assets/src/: asset.rs  handle.rs  lib.rs  loader.rs  store.rs
crates/tokimu-core/: Cargo.toml
crates/tokimu-core/src/: component.rs  diagnostics.rs  entity.rs  event.rs  lib.rs  math.rs  relation.rs  resource.rs  scene.rs  schedule.rs  signal_log.rs  system.rs  time.rs  world.rs
crates/tokimu-input/: Cargo.toml
crates/tokimu-input/src/: action_map.rs  controller.rs  event.rs  keyboard.rs  lib.rs  mouse.rs  state.rs
crates/tokimu-platform/: Cargo.toml
crates/tokimu-platform/src/: clock.rs  input.rs  lib.rs  native.rs  openxr.rs  wasm.rs  window.rs
crates/tokimu-render/: Cargo.toml
crates/tokimu-render/src/: camera.rs  color.rs  commands.rs  instance.rs  lib.rs  material.rs  mesh.rs  pipeline.rs  renderable.rs  renderer.rs  resources.rs  texture.rs  wgpu_backend.rs
crates/tokimu-rule/: Cargo.toml
crates/tokimu-rule/src/: lib.rs
crates/tokimu-runtime/: Cargo.toml
crates/tokimu-runtime/src/: app.rs  config.rs  lib.rs  output.rs  run_loop.rs  run_loop_diagnostics.rs
crates/tokimu-ts-frontend/: Cargo.toml
crates/tokimu-ts-frontend/src/: lib.rs
crates/tokimu-wasm/: Cargo.toml
crates/tokimu-wasm/src/: lib.rs
crates/tokimu/src/: lib.rs  persistence.rs
crates/tokimu/tests/: smoke.rs
docs/: README.md  Tokimu Software Design Document.md  Tokimu TypeScript Design Document.md  architectural-maxims.md  capability-backends.md  contribution-admission-guide.md  diagnostics-model.md  example-philosophy.md  future-workspace-layout.md  kernel-principles.md  other-ideas.md  output-channels.md  primitive-ledger.md  roadmap.md  scripting-typescript.md  semantic-kernel-map.md  testing-strategy.md  ui-design-document.md  wasm.md
docs/ADR/: ADR-0001-engine-boundaries.md  ADR-0002-conceptual-influence.md  ADR-0003-capability-ownership-boundary.md  ADR-0004-foundational-presentation-text-and-icons.md  ADR-0005-admission-evidence-and-maintainer-exceptions.md  ADR-0006-native-execution-policy.md
docs/Architectural Reviews/: AR-0001-shared-vector-presentation-geometry.md  AR-0002-native-execution-and-multithreading.md  README.md  TEMPLATE.md
docs/Conversations/: on-ui.md
docs/Notes/: README.md  text-corpus-v1-validation.md
docs/Plans/: README.md  font-outline-vector-presentation.md  native-execution-and-multithreading.md  presentation-geometry-corpus-harness.md  ui-box-vector-presentation.md  xml-tools.md
docs/archive/: README.md  scripting-typescript.md
examples/: README.md
examples/Assets/: README.md
examples/hello-2d-physics/: Cargo.toml  DESIGN.md
examples/hello-2d-physics/src/: main.rs
examples/hello-3d/: Cargo.toml
examples/hello-3d-mono/: Cargo.toml
examples/hello-3d-mono/src/: main.rs
examples/hello-3d-openxr/: Cargo.toml
examples/hello-3d-openxr/src/: main.rs
examples/hello-3d-stereo/: Cargo.toml
examples/hello-3d-stereo/src/: main.rs
examples/hello-3d/src/: main.rs
examples/hello-asteroids/: Cargo.toml  DESIGN.md
examples/hello-asteroids/src/: main.rs
examples/hello-cad/: Cargo.toml  DESIGN.md
examples/hello-cad/src/: main.rs
examples/hello-file-io/: Cargo.toml  DESIGN.md
examples/hello-file-io/src/: main.rs
examples/hello-fps-web/: Cargo.toml  DESIGN.md
examples/hello-fps-web/src/: main.rs
examples/hello-fps-web/web/: .gitignore  bootstrap.js  index.html  live-frame.json  package-lock.json  package.json  serve.mjs  tsconfig.build.json  tsconfig.json
examples/hello-fps-web/web/src/: hud.ts  main.ts  protocol.ts
examples/hello-glb/: Cargo.toml  DESIGN.md
examples/hello-glb/src/: main.rs
examples/hello-missile-command/: Cargo.toml
examples/hello-missile-command/src/: main.rs
examples/hello-pacman/: Cargo.toml
examples/hello-pacman/src/: main.rs
examples/hello-rule-model/: Cargo.toml
examples/hello-rule-model/src/: main.rs
examples/hello-save-image/: Cargo.toml  DESIGN.md
examples/hello-save-image/src/: main.rs
examples/hello-shader/: Cargo.toml  DESIGN.md
examples/hello-shader/assets/: ink.wgsl  neon.wgsl  ripple.wgsl
examples/hello-shader/src/: main.rs
examples/hello-snake/: Cargo.toml
examples/hello-snake/src/: main.rs
examples/hello-space-invaders/: Cargo.toml
examples/hello-space-invaders/src/: main.rs
examples/hello-svg/: Cargo.toml  DESIGN.md
examples/hello-svg/src/: main.rs
examples/hello-triangle/: Cargo.toml
examples/hello-triangle/src/: main.rs  output.rs
examples/hello-ui/: Cargo.toml
examples/hello-ui/src/: main.rs
examples/hello-vector-draw/: Cargo.toml  DESIGN.md
examples/hello-vector-draw/src/: main.rs
examples/hello-window/: Cargo.toml
examples/hello-window/src/: main.rs  output.rs
examples/lib-example/: README.md
examples/lib-example/presentation-geometry-corpus/: Cargo.toml  DESIGN.md
examples/lib-example/screenshot/: Cargo.toml  DESIGN.md
examples/lib-example/ui-framework/: Cargo.toml  DESIGN.md
examples/lib-example/ui-tools/: Cargo.toml  DESIGN.md  FIXTURES.md
examples/lib-example/xml-tools/: Cargo.toml  DESIGN.md
examples/ui/hello-ui-animation/: Cargo.toml  DESIGN.md
examples/ui/hello-ui-box/: Cargo.toml  DESIGN.md
examples/ui/hello-ui-button/: Cargo.toml  DESIGN.md
examples/ui/hello-ui-card/: Cargo.toml  DESIGN.md
examples/ui/hello-ui-font2/: Cargo.toml  DESIGN.md  comparison-notes.md
examples/ui/hello-ui-font2/src/: main.rs
examples/ui/hello-ui-textinput/: Cargo.toml  DESIGN.md
examples/ui/hello-ui-textinput/src/: main.rs
examples/wasm-demo/: bootstrap.js  index.html  package.json
frontends/: README.md  package.json  tsconfig.base.json
scripts/: prepare-glyph-corpus.ps1  prepare-lucide-sample.ps1  verify-w3c-svg-fixtures.ps1  verify-w3c-xml-fixtures.ps1
tests/: Cargo.toml
tests/fixtures/xml/: README.md
tests/src/: lib.rs
tests/tests/: presentation_geometry_corpus.rs
(+106 files in other folders)
