[workspace]
resolver = "2"
members = [
    "crates/tokimu",
    "crates/tokimu-core",
    "crates/tokimu-runtime",
    "crates/tokimu-render",
    "crates/tokimu-platform",
    "crates/tokimu-assets",
    "crates/tokimu-input",
    "crates/tokimu-wasm",
    "examples/hello-window",
    "examples/hello-triangle",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Arakendo/Tokimu"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"
glam = "0.29"
wgpu = "23"
winit = "0.30"
pollster = "0.4"
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"