[workspace]
resolver = "2"
members = [
    "crates/tokimu",
    "crates/tokimu-core",
    "crates/tokimu-runtime",
    "crates/tokimu-render",
    "crates/tokimu-platform",
    "crates/tokimu-assets",
    "crates/tokimu-input",
    "crates/tokimu-rule",
    "crates/tokimu-ts-frontend",
    "crates/tokimu-rule",
    "crates/tokimu-wasm",
    "examples/hello-window",
    "examples/hello-triangle",
    "examples/hello-3d-stereo",
    "examples/hello-3d-mono",
    "examples/hello-rule-model",
    "examples/hello-3d-openxr",
    "examples/hello-rule-model",
    "examples/hello-snake",
    "examples/hello-pacman",
    "examples/hello-space-invaders",
    "examples/hello-missile-command",
    "examples/hello-asteroids",
    "examples/hello-fps-web",
    "examples/hello-cad",
    "examples/hello-vector-draw",
    "examples/hello-svg",
    "examples/hello-glb",
    "examples/hello-2d-physics",
    "examples/ui/hello-ui",
    "examples/ui/hello-ui-button",
    "examples/ui/hello-ui-box",
    "examples/ui/hello-ui-card",
    "examples/ui/hello-ui-toolbar",
    "examples/ui/hello-ui-panel",
    "examples/ui/hello-ui-theme",
    "examples/ui/hello-ui-text",
    "examples/ui/hello-ui-layout",
    "examples/ui/hello-ui-state",
    "examples/ui/hello-ui-input",
    "examples/ui/hello-ui-textinput",
    "examples/ui/hello-ui-inspector",
    "examples/ui/hello-ui-scroll",
    "examples/ui/hello-ui-animation",
    "examples/ui/hello-ui-dialog",
    "examples/ui/hello-ui-icons",
    "examples/ui/hello-ui-glyph-corpus",
    "examples/ui/hello-ui-font",
    "examples/ui/hello-ui-font2",
    "examples/ui/hello-ui-lucide",
    "examples/ui/hello-ui-lucide2",
    "examples/ui/hello-ui-dashboard",
    "examples/hello-shader",
    "examples/lib-example/ui-tools",
    "examples/lib-example/ui-framework",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Arakendo/Tokimu"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"
glam = "0.29"
wgpu = "23"
winit = "0.30"
pollster = "0.4"
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
