[package]
name = "tokimu-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
console_error_panic_hook.workspace = true
js-sys.workspace = true
tokimu-core = { path = "../tokimu-core" }
tokimu-input = { path = "../tokimu-input" }
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = [
	"Document",
	"Element",
	"EventTarget",
	"HtmlCanvasElement",
	"HtmlElement",
	"KeyboardEvent",
	"MouseEvent",
	"Window",
] }
winit.workspace = true
