[package]
name = "tokimu-render"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
pollster.workspace = true
raw-window-handle = "0.6"
thiserror.workspace = true
wgpu.workspace = true
tokimu-core = { path = "../tokimu-core" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = ["HtmlCanvasElement"] }
