[package]
name = "hello-fps-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokimu = { path = "../../crates/tokimu", features = ["platform", "render"] }
tokimu-core = { path = "../../crates/tokimu-core" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = [
	"CustomEvent",
	"CustomEventInit",
	"EventTarget",
	"Window",
] }
