[package]
name = "hello-fps-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokimu = { path = "../../crates/tokimu", features = ["platform", "render"] }
tokimu-core = { path = "../../crates/tokimu-core" }
console_error_panic_hook.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures = "0.4"
web-sys = { workspace = true, features = [
	"Document",
	"CustomEvent",
	"CustomEventInit",
	"EventTarget",
	"Element",
	"HtmlCanvasElement",
	"HtmlElement",
	"Window",
] }
