[package]
name = "hello-glb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokimu = { path = "../../crates/tokimu", features = ["platform", "render"] }
tokimu-assets = { path = "../../crates/tokimu-assets" }
tokimu-core = { path = "../../crates/tokimu-core" }
