[package]
name = "hello-ui-font2"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
screenshot = { path = "../../lib-example/screenshot" }
tokimu = { path = "../../../crates/tokimu", features = ["platform", "render"] }
ui-tools = { path = "../../lib-example/ui-tools" }
