[package]
name = "hello-ui-textinput"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokimu = { path = "../../../crates/tokimu", features = ["platform", "render"] }
tokimu-input = { path = "../../../crates/tokimu-input" }
ui-tools = { path = "../../lib-example/ui-tools" }
